replace easytest with tasty hunit

--- a/package.yaml
+++ b/package.yaml
@@ -83,5 +83,7 @@ tests:
       - predicate
       - doctest
       - QuickCheck
-      - easytest
+      - tasty
+      - tasty-hunit
+      - tasty-quickcheck
 
