update to these-1 and remove recordwildcards

--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,9 @@ dependencies:
 - split
 - tagged
 - text
-- these
+- these >= 1.0
+- these-lens
+- semialign
 - time
 - tree-view
 - unordered-containers
