--- a/stack.yaml
+++ b/stack.yaml
@@ -6,5 +6,9 @@ extra-deps:
 - pretty-terminal-0.1.0.0
 - pretty-tree-0.1.0.0
 - tree-view-0.5
+- these-1.0.1
+- semialign-1
+- assoc-1
+- these-lens-1
 arch: x86_64
 resolver: lts-13.25
