--- a/predicate.cabal
+++ b/predicate.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.1.
+-- This file has been generated from package.yaml by hpack version 0.31.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ac5bab90c3cfa64b4c978f623664bca14fb71f3f24c5ed764ec2498559fde003
+-- hash: 1ea12c88f69b021954f86fe585bbeeafc02d687eef5caa889e2e1342be84716d
 
 name:           predicate
 version:        0.1.0.0
@@ -97,10 +97,11 @@ test-suite doctests
     , vinyl >=0.10.0.1
   default-language: Haskell2010
 
-test-suite testpred
+test-suite testspec
   type: exitcode-stdio-1.0
-  main-is: TestPred.hs
+  main-is: TestSpec.hs
   other-modules:
+      TestPred
       TestRegexHelper
       Paths_predicate
   hs-source-dirs:
