--- a/predicate.cabal
+++ b/predicate.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 698e3b6f68afcef467e976d25827dd5b2f4546a9844d689a134613aa22c655b6
+-- hash: b0ba8dd55f93f03e3f8f758a0ee893bcb138e09ab1df6765c176d5c4cb2f92fc
 
 name:           predicate
 version:        0.1.0.0
@@ -29,7 +29,7 @@ library
       JsonHelper
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wunused-type-patterns
   build-depends:
       aeson
     , aeson-pretty
@@ -58,6 +58,8 @@ library
     , unordered-containers
     , vector
     , vinyl >=0.10.0.1
+  if impl(ghc >= 8.8)
+    ghc-options: -fwrite-ide-info -hiedir=.hie
   default-language: Haskell2010
 
 test-suite doctests
@@ -65,8 +67,7 @@ test-suite doctests
   main-is: doctests.hs
   hs-source-dirs:
       ./.
-      src
-  ghc-options: -threaded
+  ghc-options: -threaded -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wunused-type-patterns
   build-depends:
       aeson
     , aeson-pretty
@@ -96,6 +97,8 @@ test-suite doctests
     , unordered-containers
     , vector
     , vinyl >=0.10.0.1
+  if impl(ghc >= 8.8)
+    ghc-options: -fwrite-ide-info -hiedir=.hie
   default-language: Haskell2010
 
 test-suite testspec
@@ -107,7 +110,7 @@ test-suite testspec
       Paths_predicate
   hs-source-dirs:
       test
-  ghc-options: -threaded -O0
+  ghc-options: -threaded -O0 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wunused-type-patterns
   build-depends:
       QuickCheck
     , aeson
@@ -142,4 +145,6 @@ test-suite testspec
     , unordered-containers
     , vector
     , vinyl >=0.10.0.1
+  if impl(ghc >= 8.8)
+    ghc-options: -fwrite-ide-info -hiedir=.hie
   default-language: Haskell2010
