--- a/predicate.cabal
+++ b/predicate.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: fde56ac67b5f9477c1146125f07e563c32a2cf6bbbacfbb63786c107d560debc
+-- hash: c392f297302cfdb8e7a641d31819cf94d23fc8802d7fc10fe3f39454e3169809
 
 name:           predicate
 version:        0.1.0.0
@@ -59,7 +59,7 @@ library
     , vector
     , vinyl >=0.10.0.1
   if impl(ghc >= 8.8)
-    ghc-options: -fwrite-ide-info -hiedir=.hie
+    ghc-options: -fwrite-ide-info -hiedir=.hie -Widentities
   default-language: Haskell2010
 
 test-suite doctests
@@ -98,7 +98,7 @@ test-suite doctests
     , vector
     , vinyl >=0.10.0.1
   if impl(ghc >= 8.8)
-    ghc-options: -fwrite-ide-info -hiedir=.hie
+    ghc-options: -fwrite-ide-info -hiedir=.hie -Widentities
   default-language: Haskell2010
 
 test-suite testspec
@@ -146,5 +146,5 @@ test-suite testspec
     , vector
     , vinyl >=0.10.0.1
   if impl(ghc >= 8.8)
-    ghc-options: -fwrite-ide-info -hiedir=.hie
+    ghc-options: -fwrite-ide-info -hiedir=.hie -Widentities
   default-language: Haskell2010
